objects/Publication__c.object
<CustomObject>
    <description>Mailing Publications (CR-1297)</description>
    <fields>
        <fullName>DERF__c</fullName>
        <description>Added for the Mailing List App (CR-1297)</description>
        <externalId>true</externalId>
        <label>DERF</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Num__c</fullName>
        <description>Added for the Mailing List App (CR-1297)</description>
        <label>Stock #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Added for the Mailing List App (CR-1297)</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Publication</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>